--- a/.github/workflows/deploy_docs.yml
+++ b/.github/workflows/deploy_docs.yml
@@ -19,9 +19,9 @@ jobs:
     #     repository: adafruit/ci-arduino
     #     path: ci
     - name: Secrets Test
-      run:
-        echo "HELLO WORLD"
-        echo ${{ secrets.GH_REPO_TOKEN }}
+      run: echo "HELLO WORLD"
+      run: echo ${{ github.actor }}
+      run: echo ${{ secrets.GH_REPO_TOKEN }}
 
     # - name: Build and Deploy Docs
     #   env:
