--- a/.github/workflows/deploy_docs.yml
+++ b/.github/workflows/deploy_docs.yml
@@ -8,7 +8,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     # checkout the repo so actions can run on it
-      - uses: actions/checkout@v3
+      - name: Checkout Repo
+        uses: actions/checkout@v3
+    # install doxygen
+      - name: Install doxygen
+        run: sudo apt-get update
+        run: sudo apt-get install doxygen
     # # checkout python
     # - uses: actions/setup-python@v4
     #   with:
