--- a/.github/workflows/deploy_docs.yml
+++ b/.github/workflows/deploy_docs.yml
@@ -11,9 +11,8 @@ jobs:
       - name: Checkout Repo
         uses: actions/checkout@v3
     # install doxygen
-      - name: Install doxygen
-        run: sudo apt-get update
-        run: sudo apt-get install doxygen
+      - run: sudo apt-get update
+      - run: sudo apt-get install doxygen
     # # checkout python
     # - uses: actions/setup-python@v4
     #   with:
