--- a/.github/workflows/deploy_docs.yml
+++ b/.github/workflows/deploy_docs.yml
@@ -12,10 +12,10 @@ jobs:
         uses: actions/checkout@v3
     # install doxygen
       - name: Install Doxygen
-        run:
-          - sudo apt-get update
-          - sudo apt-get install doxygen
-          - doxygen --version
+        run: |
+          sudo apt-get update
+          sudo apt-get install doxygen
+          doxygen --version
     # # checkout python
     # - uses: actions/setup-python@v4
     #   with:
