--- a/.github/workflows/deploy_docs.yml
+++ b/.github/workflows/deploy_docs.yml
@@ -4,18 +4,26 @@ on: push
 
 jobs:
   deploy_docs:
-    name: Fancy Name
+    name: Generate and Deploy Docs
     runs-on: ubuntu-latest
     steps:
-    # checkout the repo so actions can run on it
+
       - name: Checkout Repo
         uses: actions/checkout@v3
-    # install doxygen
+
       - name: Install Doxygen
         run: |
           sudo apt-get update
           sudo apt-get install doxygen
           doxygen --version
+
+      - name: Generate Docs
+        run : |
+          cd ${GITHUB_REPOSITORY}
+          doxygen
+
+
+
     # # checkout python
     # - uses: actions/setup-python@v4
     #   with:
