--- a/.github/workflows/deploy_docs.yml
+++ b/.github/workflows/deploy_docs.yml
@@ -10,7 +10,8 @@ jobs:
 
       - name: Checkout Repo
         uses: actions/checkout@v3
-        run: git branch -v
+
+      - run: git branch -v
 
       - name: Install Doxygen
         run: |
