--- a/.github/workflows/deploy_docs.yml
+++ b/.github/workflows/deploy_docs.yml
@@ -35,7 +35,9 @@ jobs:
           rm -rf html
           cp -r ../docs/html .
           ls -al html
-          git status
+          git add .
+          git commit -m "add docs"
+          git push origin gh-pages
 
 
     # # checkout python
