--- a/.github/workflows/deploy_docs.yml
+++ b/.github/workflows/deploy_docs.yml
@@ -33,8 +33,8 @@ jobs:
           git config --global user.email "actions_ci@nowhere.com"
           git config --global user.name "Actions CI"
           cd deploy
-          rm -rf html
-          cp -r ../docs/html .
+          rm -rf docs/*
+          cp -r ../docs/html/* docs
           git add .
           git commit -m "add docs"
           git push --force origin gh-pages
